--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <br><br>
             La perspectiva teórica proporciona una visión de dónde se sitúa el planteamiento propuesto dentro del campo de conocimiento en el cual nos “moveremos”.
             </div>
-            <img src="desktop_a503fa98-49c9-4f91-8996-4bf2acab1bf9.png" alt="perspectiva teorica">
+            <img src="https://cdn.goconqr.com/uploads/media/image/18042893/desktop_a503fa98-49c9-4f91-8996-4bf2acab1bf9.png" alt="perspectiva teorica">
             </div>
         </main>
         <h2 id="subtema1">
