--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         7. Provee de un marco de referencia para interpretar los resultados del estudio. Aunque podemos no estar de acuerdo con dicho marco o no utilizarlo para explicar nuestros resultados, es un punto de referencia.
         </div>
         <br><br>
+        <img src="T3_01marcoteori.png" alt="">
         </div>
         <h2 id="subtema2">
             ¿Qué etapas comprende el desarrollo de la perspectiva teórica?
