--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="info">
         <main>
             <h1 id="inicio">
-            DESAROLLO DE LA PERSPECTIVA ECONOMICA
+            DESAROLLO DE LA PERSPECTIVA TEORICA
             </h1>
             <div class="seccion1">
             <div class="txt1">
