--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="info">
         <main>
             <h1 id="inicio">
-            DESAROLLO DE LA PERSPECTIVA ECONOMICA : <div style="color: rgb(182, 111, 53);">  revisión de la literatura y construcción del marco teórico </div>
+            DESAROLLO DE LA PERSPECTIVA TEORICA : <div style="color: rgb(182, 111, 53);">  revisión de la literatura y construcción del marco teórico </div>
             </h1>
             <div class="seccion1">
             <div class="txt1">
